# ShoppingX

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start.sh  status-cache.json
app/: __init__.py
app/agent/: __init__.py  dispatch_tool.py  fewshot.py  fork_guard.py  llm.py  main_agent.py  model_router.py  platform_scope.py  prompts.py  retrieval_budget.py  token_budget.py  tool_registry.py  tracing.py  usage.py
app/api/: __init__.py  accounts.py  admin.py  auth.py  clarification.py  concurrency.py  connection.py  context.py  dedup.py  event_log.py  monitor.py  ratelimit.py  server.py
app/compress/: __init__.py  breakpoint.py  compressor.py  pipeline.py
app/config/: __init__.py  overrides.py  registry.py  store.py
app/db/: __init__.py  accounts.py  models.py  quota.py  session.py
app/eval/: __init__.py  recall_metrics.py  rubric.py
app/evolution/: __init__.py  collector.py  p0_fixer.py  router.py
app/harness/: __init__.py  agent_middleware.py  budgets.py  loop_detector.py  middleware.py  phase_machine.py  sentinels.py  setup.py  signals.py  state.py  truncation.py
app/memory/: __init__.py  affinity.py  assemble.py  curator.py  domains.py  history.py  injector.py  parser.py  session_state.py  store.py
app/observability/: __init__.py  alerts.py  logging.py  metrics.py
app/recall/: __init__.py  category_kb.py  duty.py  fx.py  geo.py  kb_client.py  qdrant_store.py  reranker.py  schemas.py  semantic_cache.py  shipping.py  (+2 more)
data/: DATASET_REPORT.md
docker/: Dockerfile.backend  docker-compose.prod.yml  docker-compose.yml  nginx-spa.conf
examples/: 01_min_loop.py  02_stream.py  03_fork.py  04_tools_pipeline.py  05_category_rag.py  06_compress.py  07_memory.py  08_agui_events.py  09_main_agent.py  10_server_e2e.py  README.md  tools_toy.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py  script.py.mako
prompt/: few_shot.yml  prompts.yml
scripts/: ablation_semantic_pick.py  backup_db.sh  build_category_kb.py  build_item_index.py  clean_platforms.py  fetch_milistu.py  ingest_category_kb.py  restore_db.sh  sample_rag_amazon.py
tests/: conftest.py  test_accounts.py  test_admin_config.py  test_affinity.py  test_agui.py  test_alerts.py  test_ask_user.py  test_auth.py  test_bundle.py  test_bundle_badcase.py  test_candidates.py  test_category_kb.py  test_clarification.py  test_compress.py  test_concurrency.py  test_constraint_typology.py  test_curator.py  test_domain_anchor.py  test_event_replay.py  test_evolution.py  test_fewshot.py  test_fork_safety.py  test_harness.py  test_history.py  test_image_understand.py  test_landed_cost.py  test_m0_base.py  test_main_agent.py  test_memory.py  test_model_router.py  test_observability.py  test_quota.py  test_ratelimit.py  test_reasoning_boost.py  test_recall.py  test_recall_metrics.py  test_refine_turn.py  test_resilience.py  test_retrieval_budget.py  test_rubric.py  (+12 more)
(+107 files in other folders)
